[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
html5ever = "0.26"
anyhow = "1.0.75"
markup5ever_rcdom = "0.2.0"
markup5ever = "0.11.0"
tokio = { version = "1.33.0", features = ["full"] }
